# CopyPoly

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: rules.md
.agents/knowledge/: polymarket_subgraphs.md
.agents/tasks/: lessons.md  todo.md
.agents/workflows/: backup.md  commit.md  nuke.md  restart.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_trade_history.py  003_add_raw_amounts.py  a99d9d52b67b_add_crawl_runs_table_and_resync_count.py
docs/: 01-project-overview.md  02-polymarket-api-research.md  03-technology-decisions.md  04-architecture.md  05-database-schema.md  06-implementation-plan.md  07-trader-scoring-algorithm.md  08-position-sizing.md  09-backtesting-readiness.md
scripts/: monitor.ps1  pnl_calculator.py  verify_full_account.py  verify_pnl.py
src/copypoly/: __init__.py  config.py  logging.py  main.py
src/copypoly/analysis/: __init__.py  backtester.py  conflict_resolver.py  position_sizer.py  scorer.py  watchlist.py
src/copypoly/api/: __init__.py  base.py  clob.py  data.py  gamma.py
src/copypoly/collectors/: __init__.py  history_crawler.py  leaderboard.py  markets.py  positions.py  scheduler.py
src/copypoly/dashboard/: __init__.py  api.py  app.py  routes_history.py  routes_performance.py
src/copypoly/dashboard/static/: app.js  charts.css  charts.js  index.html  style.css
src/copypoly/db/: models.py  session.py
src/copypoly/engine/: __init__.py  executor.py  signal_detector.py
src/copypoly/trading/: __init__.py
tasks/: lessons.md  todo.md
tests/: conftest.py  smoke_test_apis.py
